MUTATE - change graphic.

--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -28,7 +28,7 @@
 }
 
 .graphic_archive_02 {
-    font-family: "Fungal";
+    font-family: "FT88";
     animation: grow 150s ease-in-out infinite;
 }
 
