MUTATE - update grid

--- a/src/styles/grids.css
+++ b/src/styles/grids.css
@@ -4,6 +4,11 @@
  V: vertical (columns)
  */}
 
+.container {
+    padding: 20px;
+}
+
+
 .grid-autoFill{
     display: grid;
     position: relative;
