--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,7 +6,7 @@ html, body {
     bottom:0;
     left:0;
     right:0;
-    overflow: hidden;
+    overflow: scroll;
     text-rendering: optimizeLegibility;
     cursor: cell;
     scroll-behavior: smooth;
