--- a/src/styles/grids.css
+++ b/src/styles/grids.css
@@ -83,6 +83,19 @@
     grid-template-columns: 4fr 6fr;
 }
 
+.grid--4_6-ObjectViewer{
+    display: grid;
+    grid-template-columns: 4fr 6fr;
+}
+
+@media (max-width: 1224px) {
+    .grid--4_6-ObjectViewer {
+        display: grid;
+        grid-template-rows: 4fr 6fr;
+    }
+}
+
+
 .grid--2_6_2 {
     display: grid;
     grid-template-columns: 20% 60% 20%;
