--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,6 +7,7 @@ html, body {
     left:0;
     right:0;
     overflow-y: scroll;
+    overflow-x: hidden;
     text-rendering: optimizeLegibility;
     cursor: cell;
     scroll-behavior: smooth;
