close #89 __MUTATE__ make responsive layout for ObjectViewer.js.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -638,6 +638,10 @@ imageViewer__modal-main {
     opacity: 1;
 }
 
+.border-box{
+    border: black 2px solid
+}
+
 .img__fit{
     max-width:90%;
     height: auto;
