__MUTATE__ add related objects to ObjectPage.js

--- a/src/styles/grids.css
+++ b/src/styles/grids.css
@@ -86,7 +86,8 @@
 
 .grid--4_6-ObjectViewer{
     display: grid;
-    grid-template-columns: 4fr 6fr;
+    grid-template-columns: 4fr 0.5fr 6fr;
+    height: 100%
 }
 
 @media (max-width: 1224px) {
