--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -9,6 +9,11 @@
 }
 
 @font-face {
+    font-family: "Combine";
+    src: local("Combine"), url(fonts/Combine.otf);
+}
+
+@font-face {
     font-family: "Equateur";
     src: local("Equateur-Regular"), url(fonts/Equateur-Regular.woff2);
 }
@@ -33,8 +38,8 @@
 
 
 h1.home {
-    font-size: 8vh;
-    font-family: "FT88";
+    font-size: 6vh;
+    font-family: "Combine";
 
 }
 
