__MEND__ optimize layout for index.js

--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -58,7 +58,7 @@ h2.main {
 }
 
 h2.graphic_archive_02{
-    font-family: "FT88";
+    font-family: "Combine";
     line-height: 2.4vw;
     animation: none;
 }
