--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -106,6 +106,15 @@ p.rhizome{
     animation: grow 150s ease-in-out infinite;
 }
 
+p.rhizome.fast {
+    animation: grow 10s ease-in-out infinite;
+}
+
+h1.rhizome.fast {
+    font-family: "Fungal";
+    animation: grow 10s ease-in-out infinite;
+}
+
 @keyframes grow{
     0% {
         font-variation-settings: "THCK" 0, "grow" 0;
