__GROW__ init filter (color index) #108

--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -269,5 +269,21 @@ a {
 }
 
 .LineObjectViewer{
-    border-left: 10px solid darkseagreen;
+    border-left: 10px solid palegreen;
+}
+
+.searchbar{
+    background: transparent;
+    border: solid black 1px;
+    height: 4vh;
+    width: 100%;
+    border-radius: 20px;
+    margin-top: 0.5vh;
+    bottom: 0.5vh;
+}
+
+input
+{
+    font-family: Equateur;
+    font-size: 20px;
 }
