--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -55,3 +55,10 @@
 .hoverImage:hover{
     border: transparent 0.5px solid;
 }
+
+.description {
+    border: palegreen solid 2px;
+    border-radius: 50px;
+    background: palegreen;
+    /*animation: fluid 2s ease-in-out infinite; */
+}
