--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,6 +3,12 @@
 html {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    scrollbar-width: none;
+    scrollbar-color: transparent transparent;
+}
+
+::-webkit-scrollbar {
+    display: none;
 }
 
 html, body {
