add link to home.

--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -44,13 +44,25 @@
 
 h1.home {
     font-size: 6vh;
-    font-family: "Combine";
+    font-family: "Combine", sans-serif;
 
 }
 
 h2 {
     font-family: "Equateur", sans-serif;
     font-size: 20px;
+}
+
+.HeaderLink {
+    font-family: "Equateur", sans-serif;
+    font-size: 20px;
+    text-decoration: none;
+}
+
+.HeaderLinkBig {
+    font-size: 6vh;
+    font-family: "Combine", sans-serif;
+    text-decoration: none;
 }
 
 h2.main {
@@ -163,6 +175,11 @@ h1.rhizome.fast {
 p {
     font-size: 13px;
     font-family: Equateur;
+}
+
+a:visited {
+    color: black;
+    text-decoration: none;
 }
 
 font-size--small {
