__MUTATE__ add minor tweak for image responsive layout.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -33,6 +33,10 @@ html, body {
     background-blend-mode: color-burn;
 }
 
+img {
+    max-width: 100%;
+}
+
 .button-dropdown{
     position: absolute;
     right: 10vw;
