--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -213,7 +213,8 @@ img {
     }
 }
 
-@-o-keyframes fadeOut {
+@-o-keyframes
+fadeOut {
     0% {
         opacity:1;
     }
@@ -573,28 +574,6 @@ input{
     text-align: center;
 }
 
-
-.bruises__box{
-    position: fixed;
-    cursor: grab;
-    top: 20vh;
-    left: 80vw;
-    width: 300px;
-    border: black 2px solid;
-    padding: 10px 10px;
-}
-
-.bruises__header{
-    text-align: center;
-    font-size: 20px;
-    border: 2px solid black;
-    margin-bottom: 3.33px;
-    padding: 3.33px 3.33px;
-}
-
-.bruises__text{
-    border-top: black solid 2px;
-}
 
 .login-wrapper {
     display: flex;
