--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -206,6 +206,30 @@ a:visited {
     text-decoration: none;
 }
 
+.imageContainer{
+    position: relative;
+    text-align: center;
+    color: white;
+}
+
+.infoIcon{
+    width: 12px;
+    height: 12px;
+    line-height: 14px;
+    text-align: center;
+    position: absolute;
+    top: 18px;
+    right: 18px;
+    color: black;
+    border: black 2px solid;
+    border-radius: 50%;
+}
+
+.infoIcon:hover{
+    border-color: #f1f1f1;
+    color: #f1f1f1;
+}
+
 font-size--small {
     font-size:13px;
 }
