__GROW__  add source metadata in objectviewers. close: #167

--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -138,6 +138,12 @@ h3 {
     }
 }
 
+a {
+    color: black;
+    text-decoration: underline;
+}
+
+
 .about{
     padding: 10px;
     font-size: 18px
