__MUTATE__ update layout pill boxess.

--- a/src/styles/grids.css
+++ b/src/styles/grids.css
@@ -311,6 +311,5 @@
 }
 
 .gridPills{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(10px, 1fr));
+    display: inline-block;
 }
