--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -389,7 +389,7 @@ input
     border-radius: 50px;
     background: white;
     width: fit-content;
-    margin: 0 10px 0 0;
+    margin: 0 10px 5px 0;
 }
 
 .pillContent{
