--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -35,6 +35,7 @@
     text-align: justify;
     margin-bottom: -50%;
 }
+
 span {
     width: 100%;
     height: 1em;
@@ -217,6 +218,30 @@ a:visited {
     position: relative;
     text-align: center;
     color: white;
+}
+
+.imageContainer--attribution{
+    position: absolute;
+    z-index: 100000;
+    background: white;
+    display: block;
+    width: 400px;
+    height: auto;
+    right: 18px;
+    bottom: 20px;
+    color: black;
+    text-align: left;
+    padding: 3.33px;
+}
+
+.imageContainer--attribution_text{
+    font-family: Equateur;
+    font-size: 12px;
+}
+
+.imageContainer--attribution_link{
+    font-family: "Equateur", sans-serif;
+    font-size: 12px;
 }
 
 .infoIcon{
