--- a/src/styles/grids.css
+++ b/src/styles/grids.css
@@ -10,11 +10,12 @@
 }
 
 .container-masonry-full{
-    width: 100%
+    width: 100%;
 }
 
 .container-masonry-half {
     display: grid;
+    height: 80vh;
     grid-template-columns: 1fr 1fr;
 }
 
@@ -26,6 +27,8 @@
 .masonry {
     columns: auto 150px;
     gap: 15px;
+    height: 100%;
+    max-width: 100vw;
 }
 
 .masonry img{
@@ -312,4 +315,12 @@
 
 .gridPills{
     display: inline-block;
+}
+
+.index__header-container{
+    height: auto;
+    width: 100vw;
+    background: white;
+    z-index: 1000000;
+    top: 0;
 }
