--- a/src/styles/grids.css
+++ b/src/styles/grids.css
@@ -324,3 +324,22 @@
     z-index: 1000000;
     top: 0;
 }
+
+.index__posters-container{
+    width: 94vw;
+    height: auto;
+    overflow: scroll;
+    margin: 2vw;
+
+}
+
+.index__posters-masonry{
+    columns: auto 30vh;
+    gap: 15px;
+    height: auto;
+    max-width: 100vw;
+}
+
+.index__posters-image{
+
+}
