--- a/src/styles/layouts.css
+++ b/src/styles/layouts.css
@@ -114,3 +114,21 @@
     text-align: right;
     font-size: 2em;
 }
+
+.studioGrid-overlay{
+    position: absolute;
+    z-index: 1000000;
+    height: 38vh;
+    margin: 0.2vh;
+    width: 23vw;
+    background: rgba(175, 198, 174, 0.5);
+}
+
+.studioGrid-overlay-text{
+    background: #afc6ae;
+    position: relative;
+    top: 20vh;
+    text-align: center;
+    font-size: 2em;
+    color: black;
+}
