--- a/src/styles/layouts.css
+++ b/src/styles/layouts.css
@@ -132,3 +132,17 @@
     font-size: 2em;
     color: black;
 }
+
+.container__loading{
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(255, 255, 255, 0.7);
+    z-index: 100000000000000000;
+}
+
+.container__loading-text{
+    height: 50vh;
+    text-align: center;
+    font-size: 4em;
+}
