--- a/src/styles/grids.css
+++ b/src/styles/grids.css
@@ -7,6 +7,7 @@
 .grid__objectViewer{
     display: grid;
     grid-template-rows: 10% 70% 20%;
+    min-height: 100vh;
 }
 
 .container-masonry-full{
